# chaingpt-claude-skill

./: .gitignore  .mcp.json  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  README.md  SECURITY.md  SKILL.md  TESTING.md  plugin.json
.claude-plugin/: marketplace.json  plugin.json
.plans/: erc4337-session-keys.md  solana-signing-parity.md  v1.21-live-loop-runbook.md  x402-pay-per-call-spec.md
agents/: contract-auditor.md  defi-trader.md  web3-researcher.md
examples/rust/: Cargo.toml  README.md
examples/rust/src/: main.rs
hooks/: hooks.json  mainnet-guard.js
mcp-server/: .env.example  README.md  launch.mjs  package-lock.json  package.json  tsconfig.build.json
migration/: from-alchemy.md  from-custom.md  from-openai.md
mock-server/: README.md  package-lock.json  package.json
patterns/: README.md  defi.md  governance.md  nfts.md  security.md  tokens.md
reference/: advanced-patterns.md  agenticos.md  cost-optimization.md  crypto-news.md  deployment.md  error-codes.md  llm-chatbot.md  markets-data.md  nft-generator.md  onchain-execution.md  pricing.md  product-selection.md  saas-whitelabel.md  scheduled-autonomy.md  smart-contract-auditor.md  smart-contract-generator.md  solidity-llm.md  tron.md  typescript-types.md  wallet-integration.md  web3-toolkit.md
scripts/: check-patterns.mjs  demo-agent-wallet-dashboard.mjs  exercise-v116.mjs  mcp-boot-smoke.mjs  test-all.sh  validate.sh
templates/: chatbot-app.md  combo-defi-dashboard.md  combo-nft-marketplace.md  composition-patterns.md  contract-auditor-ci.md  creator-sidekick.md  news-dashboard.md  (+5 more)
(+158 files in other folders)
